--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "",
     "start:dev": "cross-env NODE_ENV='dev' supervisor ./build/nodeuii/app.js",
-    "start:prod": "cross-env NODE_ENV='prod' pm2 start ./build/nodeuii/pm2.json",
-    "stop": "pm2 stop all",
+    "start:prod": "sudo pm2 start ./build/nodeuii/pm2.json",
+    "stop": "sudo pm2 stop all",
     "gulp:dev": "cross-env NODE_ENV='dev' gulp",
     "gulp:prod": "cross-env NODE_ENV='prod' gulp",
-    "webpack:dev": "cross-env NODE_ENV='development' webpack --watch --progress --colors",
-    "webpack:prod": "cross-env NODE_ENV='production' webpack"
+    "webpack:dev": "cross-env NODE_ENV='development' webpack --watch --mode development",
+    "webpack:prod": "cross-env NODE_ENV='production' webpack --mode production"
   },
   "author": "yaojuntian",
   "license": "ISC",
@@ -38,9 +38,15 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-watch": "^5.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
+    "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.1.0",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3"
   }
